[package]
edition = "2021"
name = "esphome-client-rs"
version = "0.1.0"

[dependencies]
bytes = "1.5"
config = "0.13"
custom_debug_derive = "0.5.1"
env_logger = "0.10"
log = "0.4"
prost = "0.12.2"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1", features = ["full"]}

[build-dependencies]
prost-build = "0.12.2"
